force-app/main/default/objects/GFERP__Unit_of_Measure__c/GFERP__Unit_of_Measure__c.object-meta.xml
<CustomObject>
    <label>Unit of Measure</label>
    <nameField>
        <label>Unit of Measure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Units of Measure</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>