force-app/main/default/objects/GFERP__Unit_of_Measure__c/fields/GFERP__Conversion_to_Base_Weight__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Conversion_to_Base_Weight__c</fullName>
    <inlineHelpText>If the Type of this Unit of Measure is Weight and if Batch manufacturing is required, enter the conversion factor of this unit of measure to the Base Weight as defined in the Company Setup.</inlineHelpText>
    <label>Conversion to Base Weight</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>