force-app/main/default/objects/GFERP__Unit_of_Measure__c/fields/GFERP__Description__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Description__c</fullName>
    <inlineHelpText>Use this field to give more detailed information about the unit of measure.</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>