force-app/main/default/objects/GFERP__Unit_of_Measure__c/fields/GFERP__Do_Not_Allow_Decimals__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Do_Not_Allow_Decimals__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this field if a decimal quantity will not be permitted for the Unit of Measure when posting inventory transactions (For Example, if you have an item with the Sales Unit of Measure of Case, you won&apos;t be able to sell half or .5 cases).</inlineHelpText>
    <label>Do Not Allow Decimals</label>
    <type>Checkbox</type>
</CustomField>