force-app/main/default/objects/GFERP__Unit_of_Measure__c/fields/GFERP__Type__c.field-meta.xml
<CustomField>
    <fullName>GFERP__Type__c</fullName>
    <inlineHelpText>The types of the Unit of Measure can be Length, Area, Volume, Weight, Time, Price, Package, Batch or Other.</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GFERP__Unit_of_Measure_Type</valueSetName>
    </valueSet>
</CustomField>