force-app/main/default/objects/GFERP__Unit_of_Measure__c/listViews/GFERP__All.listView-meta.xml
<ListView>
    <fullName>GFERP__All</fullName>
    <columns>NAME</columns>
    <columns>GFERP__Description__c</columns>
    <columns>GFERP__Type__c</columns>
    <columns>GFERP__Conversion_to_Base_Weight__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>